# DSA

./: .gitignore  CONTRIBUTING.md  HOW_TO.md  Lesson1_BinarySearch,LinkedListsandComplexity.ipynb  README.md  pyproject.toml  requirement.txt
.github/workflows/: PR_validator.yml  python-app.yml  python-package.yml
Ruler/: Analyzer.py  testCases.py  util.py
Solution/Question1/: array-ds.py  solution.md
Solution/Question10/: LinkedList.py  linkedListInsertToAPosition.py
Solution/Question11/: sparseArray.py
Solution/Question12/: arrayManipulation.py
Solution/Question13/: LinkedList.py  linkedListCompareTwo.py
Solution/Question14/: LinkedList.py  linkedListMergeTwo.py
Solution/Question15/: LinkedList.py  linkedListCyclic.py  solution.md
Solution/Question16/: LinkedList.py  linkedListCyclic.py  solution.md
Solution/Question17/: LinkedList.py  linkedListDropDuplicate.py
Solution/Question18/: aBigSum.py  solution.md
Solution/Question19/: triplet.py
Solution/Question2/: Soultion.md  sum_pair.py
Solution/Question20/: blowlargestCandle.py
Solution/Question21/: birthday.py
Solution/Question22/: multiples.py
Solution/Question23/: evenFibonacci.py
Solution/Question24/: primeFactors.py
Solution/Question25/: palindromeProduct.py
Solution/Question26/: smallestMultiple.py
Solution/Question27/: seriesAbsoluteSum.py
Solution/Question28/: prime.py
Solution/Question29/: largestProductSeries.py  solution.md
Solution/Question3/: hourglass.py  solution.md
Solution/Question30/: pythagorian.py  solution.md
Solution/Question31/: largestinGrid.py  (+1 more)
(+62 files in other folders)
